<resources>
    <string name="app_name">Travel book</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="your_place_wishlist">Your wishlist</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="dummy_address">Scarborough Town Centre, 300 Borough Dr, Scarborough, ON M1P 4P5, Canada</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_name">Enter name</string>
    <string name="delete_note">Swipe to update or delete place</string>
    <string name="mark_as_visited">Mark as visited</string>
    <string name="distance_100km">Distance : 0km</string>
    <string name="get_directions">Get directions</string>
</resources>