<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewPlace">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/placeImage"
                android:src="@drawable/demo_image"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
            <TextView
                android:text="@string/title"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/enter_name"
                android:maxLines="1"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/address"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/enter_address"
                android:maxLines="1"
                android:id="@+id/txtAddress"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="300dp">
                <androidx.fragment.app.FragmentContainerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:text="@string/add_to_wishlist"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
</RelativeLayout>