<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/place_image"
                android:src="@drawable/no_image"
                android:scaleType="centerCrop"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/padding_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/title"
                    android:id="@+id/txt_title"
                    android:textColor="@color/primary_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/dummy_address"
                    android:id="@+id/txt_address"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:text="@string/distance_100km"
                    android:id="@+id/txt_distance"
                    android:layout_marginTop="@dimen/padding_small"
                    android:textColor="@color/light_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_margin="@dimen/padding_medium"
                android:layout_height="200dp">
                <androidx.fragment.app.FragmentContainerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
            </androidx.cardview.widget.CardView>
            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/mark_as_visited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/mark_as_visited"
        app:icon="@drawable/ic_baseline_check_48_black" />
</RelativeLayout>