<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:layout_width="match_parent">
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/addressView"
        android:background="@color/white"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:focusable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:src="@drawable/demo_image"
                    android:id="@+id/placeImage"
                    android:scaleType="centerCrop"
                    android:layout_height="200dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:text="@string/dummy_address"
                        android:id="@+id/txtAddress"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="15dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:text="@string/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"/>
                        <Button
                            android:text="@string/save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <SearchView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:id="@+id/search_bar_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:theme="@style/CardView"
        android:elevation="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content" />
    <ListView
        android:background="@color/white"
        android:id="@+id/suggestionsList"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_below="@id/search_bar_text"
        android:layout_height="wrap_content"/>
</RelativeLayout>